# deepseek_experiments

./: LICENSE  README.md  pyproject.toml
deepseek_experiments/: app_chat.py  app_document_rag.py  app_python_coder.py
deepseek_finetuning/: finetuning_basic.py
